Revision history HTML::Lint and Test::HTML::Lint.

NOTE: All bugs and requests are now being handled through GitHub.

    https://github.com/petdance/html-lint/issues

Please DO NOT send bug reports to http://rt.cpan.org/.

2.21_01
    [ENHANCEMENTS]
    Added new error, elem-input-alt-missing, that warns of <input
    type="image"> tags that are missing an alt="" attribute.  This helps
    for accessability to make sure that any images have alternate text
    for screen readers.

    Added ability to modify HTML::Lint's table of known tags and
    attributes, so you could do this:

        # Add an attribute that your company uses.
        HTML::Lint::HTML4::add_attribute( 'body', 'proprietary-attribute' );

        # Add the HTML 5 <canvas> tag.
        HTML::Lint::HTML4::add_tag( 'canvas' );
        HTML::Lint::HTML4::add_attribute( 'canvas', $_ ) for qw( height width );

    [FIXES]
    Test::HTML::Lint::html_ok() would not call the HTML::Lint eof()
    method, which allowed some invalid HTML to get by.

2.20    Fri Apr  6 00:49:51 CDT 2012
    [ENHANCEMENTS]
    Sometimes creating HTML::Lint-compliant HTML just isn't possible.
    Now, you can now turn individual errors on and off in your HTML
    via comment directives, like so:

        <!-- html-lint elem-img-sizes-missing: off, attr-unknown: off -->

    And if you have a batch of code that's hopeless:

        <!-- html-lint all: off -->

    Added check for unknown entities, such as "&foo;".

    Added check for unclosed entitities, such as "&amp" without the
    closing semicolon.

    Added a check for a bare ampersand that should be written as &amp;


2.10    Tue Dec  6 11:16:16 CST 2011
    [FIXES]
    Tags that were self-closed were being ignored.  For example, if you had

        <img src="blah.jpg" />

    then HTML::Lint would ignore the tag.  This has been fixed.

    [LICENSE]
    HTML::Lint is now explicitly licensed under Artistic License 2.0,